--- a/myHomework/index.html
+++ b/myHomework/index.html
@@ -2,12 +2,43 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>
-      My GithubPage
-    </title>
+    <title>My GithubPage</title>
+    <style>
+      body, html {
+        height: 100%;
+        margin: 0;
+        font-family: Arial, Helvetica, sans-serif;
+        display: grid;
+        justify-items: center;
+        align-items: center;
+        background-color: black;
+      }
+
+      #bgVideo {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        min-width: 100%;
+        min-height: 100%;
+        width: auto;
+        height: auto;
+        z-index: -100;
+        transform: translateX(-50%) translateY(-50%);
+        background-size: cover;
+        transition: 1s opacity;
+      }
+
+      .content {
+        z-index: 100;
+      }
+    </style>
   </head>
   <body>
-    This is my github Page
-    
+    <video autoplay muted loop id="bgVideo">
+      <source src="https://raw.githubusercontent.com/JiazhenLuo/NicoGithubPage/main/myHomework/assets/homePage.mp4" type="video/mp4">
+    </video>
+    <div class="content">
+      This is my github Page
+    </div>
   </body>
 </html>
