--- a/myHomework/index.html
+++ b/myHomework/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>My GithubPage</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <video autoplay muted loop id="bgVideo">
-      <source src="https://raw.githubusercontent.com/JiazhenLuo/NicoGithubPage/main/myHomework/assets/homePage.mp4" type="video/mp4">
+        <source src="https://raw.githubusercontent.com/JiazhenLuo/NicoGithubPage/main/myHomework/assets/homePage.mp4"
+            type="video/mp4">
     </video>
     <div class="content">
-      
+
     </div>
-  </body>
+</body>
+
 </html>
